# ssra

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
baselines/: flat.py  loglinear.py  megabyte.py
docker/: Dockerfile
docs/: 00-stav-a-triaz.md  01-mechanizmus.md  02-prior-art-mapa.md  03-poc-plan.md  spec.md
experiments/: M1-smoke-flat.yaml  M1-smoke-megabyte.yaml  M1-smoke-p1.yaml  M1-smoke-p2.yaml  M1-smoke-p3.yaml  M2-cal-s1-flat-b16.yaml  M2-cal-s1-flat-b32.yaml  M2-cal-s1-flat-b64.yaml  M2-cal-s1-ssra-b16.yaml  M2-cal-s1-ssra-b32.yaml  M2-cal-s1-ssra-b64.yaml  M2-cal-s2-flat-b16.yaml  M2-cal-s2-flat-b32.yaml  M2-cal-s2-flat-b64.yaml  M2-cal-s2-ssra-b16.yaml  M2-cal-s2-ssra-b32.yaml  M2-cal-s2-ssra-b64.yaml  M2-data-900m.yaml  M2-phase0-cpu-smoke.yaml  M2-phase0-data.yaml  m2-3b-frozenref-smoke.yaml  m2-core-flat-s2-850m-lr6e4.yaml  m2-core-flat-s2-850m.yaml  m2-core-ssra-s2-850m-lr6e4.yaml  m2-core-ssra-s2-850m.yaml  m2-g2lite-eval.yaml  m2-sweep-flat-lr1e3-do00.yaml  m2-sweep-flat-lr1e3-do01.yaml  m2-sweep-flat-lr3e4-do00.yaml  m2-sweep-flat-lr6e4-do00.yaml  m2-sweep-localsmoke-r0.yaml  m2-sweep-ssra-lr1e3-do00.yaml  m2-sweep-ssra-lr1e3-do01.yaml  m2-sweep-ssra-lr3e4-do00.yaml  m2-sweep-ssra-lr6e4-do00.yaml
logs/: M2-cal-s1-flat-b16.stdout  M2-cal-s1-flat-b32.stdout  M2-cal-s1-flat-b64.stdout  M2-cal-s1-ssra-b16-measurement.stdout  M2-cal-s1-ssra-b16-resume.stdout  M2-cal-s1-ssra-b32.stdout  M2-cal-s1-ssra-b64.stdout  M2-cal-s2-flat-b16.stdout  M2-cal-s2-flat-b32.stdout  M2-cal-s2-flat-b64.stdout  (+11 more)
(+157 files in other folders)
