[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ssra"
version = "0.1.0"
description = "SSRA (Scale-Shared Recursive Attention) — PoC implementation per docs/spec.md v1.0"
requires-python = ">=3.11"
dependencies = [
    "torch==2.12.0",
    "PyYAML==6.0.3",
    "numpy==2.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "matplotlib==3.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
